--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -11,14 +11,29 @@ vignette: >
 
 #Modeling diversity from Occupancy.
 
+##Theory
+
 Since its inception in 2002 by MacKenzie et al. 
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
 
-- Never uses retina figures
-- Has a smaller default figure size
-- Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
+##How to use it
 
-## Vignette Info
+###Data formating
+
+In order to use the DiversityOccupancy package you need at least three files:
+
+####Detection history
+
+###Fiting the models and predicting diversity
+
+###Selecting the best model to predict diversity
+
+###Visualising the response of diversity to the selected Variables
+
+###Predicting to a new dataset 
+
+###Spatial data
+
+#References
 
 Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
 
